Limits Number of iterations